IRtest_out/fib.err
irs/fib.ll:29:19: error: '@recur_sum' defined with type 'i32 (i32*, i32)*' but expected 'i32 (i32, i32)*'
  %v36 = call i32 @recur_sum(i32 %v32, i32 %v35)
                  ^
1 error generated.
